src/assets/styles/index.module.scss
@import "main";

.main {
  width: 100%;
  height: 100vh;
  max-height: 1200px;
  position: absolute;
  top: 0px;
  left: 0px;
  overflow: hidden;
  orientation: portrait;
  height: -webkit-fill-available;
  // background-image: url('/src/assets/images/backgroundImg2.jpg');
}

.navBar {
  width: 100vw;
  height: 50px;
  // min-height: 5%;
  background-color: rgba(0, 0, 0, 0.25);
  backdrop-filter: blur(20px);
  position: absolute;
  bottom: 0px;
  left: 0px;
  @include flex(row, space-evenly, center);
  z-index: 0;
}

.buttons {
  img {
    width: 30px;
    height: auto;
  }
  color: $secondaryTextColor;
  @include flex(column, center, center);
  background-color: transparent;
  border: none;
  font-size: 12px;
  font-family: "Poppins", sans-serif;
  text-decoration: none;
}

.section {
  overflow: hidden auto;
  height: calc(100vh - 50px);
  width: 100vw;
  text-align: center;
  margin-bottom: 50px;
  background-color: $secondaryColor;
  color: $mainColor;
  font-family: "Poppins", sans-serif;
  padding: 10px 5px;
  orientation: portrait;
  @include flex(column, flex-start, center);
  background: transparent;
  // background: radial-gradient(circle, #1c4a9f, #09153f);
  background-size: auto 100vh;
  backdrop-filter: opacity(0.2);
}

